--- a/site/templates/test.twig
+++ b/site/templates/test.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
 
 {% block body %}
-<h1>Bonjour {{ nom }}</h1>
+<h1 class="radio">Bonjour {{ nom }}</h1>
 {% endblock %}
