--- a/site/templates/layout.twig
+++ b/site/templates/layout.twig
@@ -11,14 +11,16 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
                   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
                   crossorigin="anonymous">
+            <link rel="stylesheet" type="text/css" href="css/bootflat.min.css">
             <link rel="stylesheet" href="{{ base_url() }}/css/bootflat.css">
         {% endblock %}
     {% endblock %}
 </head>
+<body>
 {% block body %}
     <p>du contenu</p>
 {% endblock %}
-<footer >
+<footer class="container-fluid text-center">
     {% block footer %}
         <div id="footer" class="footer-copyright">
             <i class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></i>copyright 2017 Guillaume Desrumaux, Artru Thomas, Meziane Yanis, Herrenschmidt Felix, Billaud William
@@ -33,7 +35,7 @@
     <script src="{{ base_url() }}/js/icheck.min.js"></script>
     <script src="{{ base_url() }}/js/jquery.fs.selecter.min.js"></script>
     <script src="{{ base_url() }}/js/jquery.fs.stepper.min.js"></script>
-
 {% endblock %}
+</body>
 </html>
 
