--- a/site/templates/pages/test.twig
+++ b/site/templates/pages/test.twig
@@ -6,5 +6,5 @@
 
     <h1 class="radio">Bonjour {{ nom|capitalize }}</h1>
     {# permet de créer un lien vers une page salut avec comme parametre de nom bob ( nom de la routes dans routes.php #}
-    <li><a href="{{ path_for('salut',{'nom':'bob'}) }}">Bonjour bob!</a></li>
+    <li><a href="{{ path_for('salut',{'nom':'Thomas'}) }}">Bonjour bob!</a></li>
 {% endblock %}
