--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -16,7 +16,8 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ path_for('login.get') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="{{ path_for('login.get') }}"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                <li><a href="{{ path_for('logout') }}"><span class="glyphicon glyphicon-log-out"></span> Deconnecter</a></li>
             </ul>
         </div>
     </div>
