--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -40,6 +40,7 @@ Page de connexion
                                 </div>
                             </fieldset>
                         </form>
+                        <a href="{{ path_for('recover.get') }}">mot de passe oublie</a>
                     </div>
                 </div>
             </div>
