--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -21,26 +21,36 @@ Page de connexion
                         <h3 class="panel-title">Connexion</h3>
                     </div>
                     <div class="panel-body">
+
+                        {% if errors %}
+                        <div class="alert alert-danger">
+                                {% for error in errors %}
+                                    <div class="text">
+                                    {{ error }}
+                                    </div>
+                                {% endfor %}
+                        </div>
+                        {% endif %}
                         <form role="form" action="{{ path_for('login.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old.email }}" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Mot de passe" name="password" type="password" value="">
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input name="remember" type="checkbox" value="Se souvenir de moi">Se souvenir de moi
+                                        <input type="checkbox"> Se souvenir de moi
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
                                 <div class="form-group">
-                                    <input class="btn btn-lg btn-success btn-block" type="submit" value="Connexion">
+                                    <button class="btn btn-lg btn-success btn-block" type="submit">Connexion</button>
                                 </div>
                             </fieldset>
                         </form>
-                        <a href="{{ path_for('recover.get') }}">mot de passe oublie</a>
+                        <a href="{{ path_for('recover.get') }}">Mot de passe oublié</a>
                     </div>
                 </div>
             </div>
