--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -34,14 +34,14 @@ Page de connexion
                         <form role="form" action="{{ path_for('login.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old.email }}" autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old.email }}" required autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Mot de passe" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Mot de passe" name="password" type="password" required>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox"> Se souvenir de moi
+                                        <input type="checkbox" name="remember"> Se souvenir de moi
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
