--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -34,7 +34,7 @@ Page de connexion
                         <form role="form" action="{{ path_for('login.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old.email }}" required autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old }}" required autofocus>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Mot de passe" name="password" type="password" required>
