--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -17,6 +17,11 @@
                 <p><a href="#">Link</a></p>
             </div>
             <div class="col-sm-8 text-left">
+                <p>Enfants :
+                    {% for nom in noms_enfants %}
+                        {{ nom }}
+                    {% endfor %}
+                </p>
                 <h1>Welcome</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
