--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -17,7 +17,8 @@
                          <h3 class="panel-title">Enfants à Charge</h3>
                      </div>
                      <div class="panel-body">
-                         Liste enfants à test:
+                         todo: lister les enfants
+                         avec un href vers leurs gestion
                          {% for nom in noms_enfants %}
                              {{ nom }}
                          {% endfor %}
@@ -29,9 +30,11 @@
                          <h3 class="panel-title">Mes Informations</h3>
                      </div>
                      <div class="panel-body">
+                         todo: afficher liste infos
+                         basique et mettre le lien sur le bouton
 
 
-
+                         <button type="button" class="btn btn-primary btn-block">Modifier</button>
 
 
                      </div>
@@ -59,7 +62,11 @@
 
                 Pour tout problème, contactez l'administrateur du site.
                 </p>
+
                 <hr>
+
+                <p> todo: Calendrier des enfants à afficher ici
+                </p>
 
 
 
