--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -31,10 +31,7 @@
                      </div>
                      <div class="panel-body">
                          todo: afficher liste infos
-                         basique et mettre le lien sur le bouton
-
-
-                         <button type="button" class="btn btn-primary btn-block">Modifier</button>
+                         basique concernant le responsable légal
 
 
                      </div>
