model recuperation info user

--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -30,9 +30,7 @@
                          <h3 class="panel-title">Mes Informations</h3>
                      </div>
                      <div class="panel-body">
-                         todo: afficher liste infos
-                         basique et mettre le lien sur le bouton
-
+                        {{ infoUtilisateur.nom_rl }}
 
                          <button type="button" class="btn btn-primary btn-block">Modifier</button>
 
