--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -18,7 +18,7 @@
                      </div>
                      <div class="panel-body">
                          {% for enfant in enfants %}
-                             {{ enfant.prenom }}<br>
+                             <a href="#"> {{ enfant.prenom |capitalize }}</a><br>
                          {% endfor %}
                      </div>
                  </div>
