--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -10,14 +10,16 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="{{ path_for('index') }}">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="{{ path_for('index') }}">Accueil</a></li>
+                <li><a href="#">Planning</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ path_for('login.get') }}"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                {% if infoUtilisateur.id_responsable_legal %}
                 <li><a href="{{ path_for('logout') }}"><span class="glyphicon glyphicon-log-out"></span> Deconnecter</a></li>
+                {% else %}
+                <li><a href="{{ path_for('login.get') }}"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                {% endif  %}
             </ul>
         </div>
     </div>
