Connexion d'un administrateur + footer fix

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -16,9 +16,12 @@ height: 100%;
 
 /* Set black background color, white text and some padding */
 footer {
-background-color: #555;
-color: white;
-padding: 13px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #555;
+    color: white;
+    padding: 13px;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
