--- a/site/templates/layout.twig
+++ b/site/templates/layout.twig
@@ -37,8 +37,8 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     {{ m.js("icheck.min.js") }}
-    <script src="{{ base_url() }}/js/jquery.fs.selecter.min.js"></script>
-    <script src="{{ base_url() }}/js/jquery.fs.stepper.min.js"></script>
+    {{ m.js("jquery.fs.selecter.min.js") }}
+    {{ m.js("jquery.fs.stepper.min.js") }}
 {% endblock %}
 </body>
 </html>
