Correction import de classe

--- a/site/public/css/zabuto_calendar.css
+++ b/site/public/css/zabuto_calendar.css
@@ -154,6 +154,6 @@ div.zabuto_calendar div.legend span.badge {
 
 /* Classname des différentes activités */
 
-div.red{
+.red{
     background-color: #dd4444;
 }
