Navbar fixed-top

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,7 +1,7 @@
-/* Remove the navbar's default margin-bottom and rounded borders */ 
+/* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-margin-bottom: 0;
-border-radius: 0;
+    margin-bottom: 0;
+    border-radius: 0;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -9,14 +9,13 @@ border-radius: 0;
 
 /* Set gray background color and 100% height */
 .sidenav {
-padding-top: 20px;
-background-color: #f1f1f1;
-height: 100%;
+    padding-top: 20px;
+    background-color: #f1f1f1;
+    height: 100%;
 }
 
 /* Set black background color, white text and some padding */
 footer {
-    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: #555;
@@ -26,11 +25,11 @@ footer {
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
-.sidenav {
-height: auto;
-padding: 15px;
-}
-.row.content {height:auto;} 
+    .sidenav {
+        height: auto;
+        padding: 15px;
+    }
+    .row.content {height:auto;}
 }
 
 /* Correction problème alignement checkbox sur login.twig */
@@ -44,3 +43,9 @@ padding: 15px;
 .login-panel {
     margin-top: 5px;
 }
+
+/* index */
+#firstContainer{
+    margin-top: 50px;
+}
+
