--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -8,8 +8,7 @@
 
 {% block body %}
     {{ include('navbar.twig') }}
-
-    <div class="container-fluid text-center" xmlns="http://www.w3.org/1999/html">
+    <div id="firstContainer" class="container-fluid text-center" xmlns="http://www.w3.org/1999/html">
          <div class="row content">
              <div class="col-sm-2 sidenav">
                  <div class="panel panel-primary">
