--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -26,11 +26,11 @@
                      <div class="panel-heading">
                          <h3 class="panel-title">Mes Informations</h3>
                      </div>
-                     <div class="panel-body">
+                     <div class="panel-body" style="word-wrap:break-word;">
                          {{ infoUtilisateur.nom_rl |capitalize }}
                          {{ infoUtilisateur.prenom_rl |capitalize}} </br>
                          {{ infoUtilisateur.adresse_mail_rl }} </br>
-                         {{ infoUtilisateur.complement_d_adresse }}, </br>
+                         {{ infoUtilisateur.complement_d_adresse }} </br>
 
                          {{ infoUtilisateur.code_postal }}  {{ infoUtilisateur.ville }}
 
