--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -13,7 +13,7 @@ Page de connexion
 {% block body %}
     {{ include('navbar.twig') }}
 
-    <div class="container">
+    <div class="container firstContainer">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
