--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -49,3 +49,10 @@ footer {
     margin-top: 50px;
 }
 
+/* label info admin/utilisateur */
+.info{
+    margin-top: 5px;
+    float: inherit;
+    font-size: 20px;
+}
+
