Rafraichissement automatique après modification du calendrier

--- a/site/public/css/zabuto_calendar.css
+++ b/site/public/css/zabuto_calendar.css
@@ -157,3 +157,7 @@ div.zabuto_calendar div.legend span.badge {
 .red{
     background-color: #dd4444;
 }
+
+.green{
+    background-color: #1ba11e;
+}
