--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,7 +1,7 @@
-/* Remove the navbar's default margin-bottom and rounded borders */ 
+/* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-margin-bottom: 0;
-border-radius: 0;
+    margin-bottom: 0;
+    border-radius: 0;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -9,25 +9,27 @@ border-radius: 0;
 
 /* Set gray background color and 100% height */
 .sidenav {
-padding-top: 20px;
-background-color: #f1f1f1;
-height: 100%;
+    padding-top: 20px;
+    background-color: #f1f1f1;
+    height: 100%;
 }
 
 /* Set black background color, white text and some padding */
 footer {
-background-color: #555;
-color: white;
-padding: 13px;
+    bottom: 0;
+    width: 100%;
+    background-color: #555;
+    color: white;
+    padding: 13px;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
-.sidenav {
-height: auto;
-padding: 15px;
-}
-.row.content {height:auto;} 
+    .sidenav {
+        height: auto;
+        padding: 15px;
+    }
+    .row.content {height:auto;}
 }
 
 /* Correction problème alignement checkbox sur login.twig */
@@ -41,3 +43,16 @@ padding: 15px;
 .login-panel {
     margin-top: 5px;
 }
+
+/* index */
+.firstContainer{
+    margin-top: 50px;
+}
+
+/* label info admin/utilisateur */
+.info{
+    margin-top: 5px;
+    float: inherit;
+    font-size: 20px;
+}
+
