--- a/site/templates/pages/contact.twig
+++ b/site/templates/pages/contact.twig
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="container-fluid text-center" xmlns="http://www.w3.org/1999/html">
+            <div class="container-fluid text-center firstContainer" xmlns="http://www.w3.org/1999/html">
                 <h2 class="form-title">Formulaire de contact</h2>
             </div>
             <div class="row">
