--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -25,7 +25,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">Mes Informations</h3>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="word-wrap:break-word;">
                         {{ infoUtilisateur.nom_rl |capitalize }}
                         {{ infoUtilisateur.prenom_rl |capitalize}}
                         <div class="row"></div>
