--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -10,38 +10,39 @@
     {{ include('navbar.twig') }}
 
     <div class="container-fluid text-center" xmlns="http://www.w3.org/1999/html">
-         <div class="row content">
-             <div class="col-sm-2 sidenav">
-                 <div class="panel panel-primary">
-                     <div class="panel-heading">
-                         <h3 class="panel-title">Enfants à Charge</h3>
-                     </div>
-                     <div class="panel-body">
-                         {% for enfant in enfants %}
-                             <a href="{{ path_for('calendrier', { 'id' : enfant.id }) }}"> {{ enfant.prenom |capitalize }}</a><br>
-                         {% endfor %}
-                     </div>
-                 </div>
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Enfants à Charge</h3>
+                    </div>
+                    <div class="panel-body">
+                        {% if enfants %}
+                            {% for enfant in enfants %}
 
-                 <div class="panel panel-primary">
-                     <div class="panel-heading">
-                         <h3 class="panel-title">Mes Informations</h3>
-                     </div>
-                     <div class="panel-body">
-                         {{ infoUtilisateur.nom_rl |capitalize }}
-                         {{ infoUtilisateur.prenom_rl |capitalize}} </br>
-                         {{ infoUtilisateur.adresse_mail_rl }} </br>
-                         {{ infoUtilisateur.complement_d_adresse }}, </br>
+                                <a href="{{ path_for('calendrier', { 'id_enfant' : enfant.id }) }}"> {{ enfant.prenom |capitalize }}</a><br>
+                            {% endfor %}
+                        {% else %}
+                            Vous n'avez pas d'enfants
+                        {% endif %}
+                    </div>
+                </div>
 
-                         {{ infoUtilisateur.code_postal }}  {{ infoUtilisateur.ville }}
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Mes Informations</h3>
+                    </div>
+                    <div class="panel-body">
+                        {{ infoUtilisateur.nom_rl |capitalize }}
+                        {{ infoUtilisateur.prenom_rl |capitalize}} </br>
+                        {{ infoUtilisateur.adresse_mail_rl }} </br>
+                        {{ infoUtilisateur.complement_d_adresse }}, </br>
 
-                     </div>
-                 </div>
+                        {{ infoUtilisateur.code_postal }}  {{ infoUtilisateur.ville }}
 
-
-
-
-             </div>
+                    </div>
+                </div>
+            </div>
             <!-- <div class="col-sm-2 sidenav">
                 <p><a href="#">Link</a></p>
                 <p><a href="#">Link</a></p>
@@ -50,10 +51,10 @@
             <div class="col-sm-8 text-left">
                 <CENTER><h1>Bienvenue</h1></CENTER>
                 <p>Ce site vous permet de gérer l'emploie du temps de vos enfants en ligne.
-                S'il s'agit de votre première connexion, il est fortement conseillé
+                    S'il s'agit de votre première connexion, il est fortement conseillé
                     de modifier votre mot de passe au plus vite afin de ne pas le perdre.
 
-                Pour tout problème, contactez l'administrateur du site.
+                    Pour tout problème, contactez l'administrateur du site.
                 </p>
 
                 <hr>
@@ -68,21 +69,21 @@
             </div>
             <div class="col-sm-2 sidenav">
                 <div class="thumbnail">
-                <img class="img-rounded" src="../../img/JIS_couleur_détouré.gif">
-                <div class="caption text-center">
-                  <h3>Site JIS - La Crau</h3>
-                  <p>Retrouvez toutes les actualités de l'association Jeunesse Inter Services. Toutes les infomations utiles s'y trouvent.</p>
-                  <p><a href="http://www.jis-lacrau.com/" class="btn btn-warning" role="button">Site</a> <a href="http://www.jis-lacrau.com/contactez-nous.html" class="btn btn-default" role="button">Contact</a></p>
+                    <img class="img-rounded" src="../../img/JIS_couleur_détouré.gif">
+                    <div class="caption text-center">
+                        <h3>Site JIS - La Crau</h3>
+                        <p>Retrouvez toutes les actualités de l'association Jeunesse Inter Services. Toutes les infomations utiles s'y trouvent.</p>
+                        <p><a href="http://www.jis-lacrau.com/" class="btn btn-warning" role="button">Site</a> <a href="http://www.jis-lacrau.com/contactez-nous.html" class="btn btn-default" role="button">Contact</a></p>
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
     </div>
 {% endblock %}
 
 
-{% block footer %}
-    <div id="footer" class="footer-copyright">
-        <i class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></i> Copyright 2017 Guillaume Desrumaux, Artru Thomas, Meziane Yanis, Herrenschmidt Felix, Billaud William
-    </div>
-{% endblock %}
+            {% block footer %}
+                <div id="footer" class="footer-copyright">
+                    <i class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></i> Copyright 2017 Guillaume Desrumaux, Artru Thomas, Meziane Yanis, Herrenschmidt Felix, Billaud William
+                </div>
+            {% endblock %}
