choix activite dynamique

--- a/site/public/css/zabuto_calendar.css
+++ b/site/public/css/zabuto_calendar.css
@@ -161,3 +161,7 @@ div.zabuto_calendar div.legend span.badge {
 .green{
     background-color: #1ba11e;
 }
+
+.blue{
+    background-color: #583cda;
+}
