--- a/site/templates/pages/index-admin.twig
+++ b/site/templates/pages/index-admin.twig
@@ -23,25 +23,25 @@
                         <div class="row"></div>
                         {{ infoUtilisateur.complement_d_adresse }}
                         <div class="row"></div>
-                        {{ infoUtilisateur.code_postal }}  {{ infoUtilisateur.ville }}
+                        {{ infoUtilisateur.code_postal }}{{ infoUtilisateur.ville }}
+                        {{ mot_de_passe_rl }}
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <form role="form" action="{{ path_for('contact.post') }}" method="post">
+                <form role="form" action="{{ path_for('add-user.post') }}" method="post">
                     <fieldset>
                         <div class="form-group">
                             <span class="label label-primary col-md-4 center-block info">Ajout Utilisateur</span>
-                            <input class="form-control" placeholder="Nom" name="nom" style="text-align:center; margin: 5px;" type="text" value="" required autofocus>
-                            <input class="form-control" placeholder="Prenom" name="prenom" type="text"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                            <input class="form-control" placeholder="E-mail" name="email" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                            <input class="form-control" placeholder="Ville" name="email" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                            <input class="form-control" placeholder="Code Postal" name="email" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
+                            <input class="form-control" placeholder="Nom" name="nom_rl" style="text-align:center; margin: 5px;" type="text" value="" required autofocus>
+                            <input class="form-control" placeholder="Prenom" name="prenom_rl" type="text"  style="text-align:center; margin: 5px;" value="" required autofocus>
+                            <input class="form-control" placeholder="E-mail" name="adresse_mail_rl" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
+                            <input class="form-control" placeholder="Ville" name="ville" type="text"  style="text-align:center; margin: 5px;" value="" required autofocus>
+                            <input class="form-control" placeholder="Code Postal" name="code_postal" type="number"  style="text-align:center; margin: 5px;" value="" required autofocus>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-lg btn-success btn-block" type="submit">Envoyez</button>
                         </div>
-
                     </fieldset>
                 </form>
             </div>
