--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -14,22 +14,23 @@
     {{ include('navbar.twig') }}
     <div class="firstContainer">
         <form enctype="multipart/form-data" class="firstContainer" method="post">
-            <label for="Ecole">
-                <select name="Ecole" id="Ecole" onchange="{{path_for('selectClasse.post') }}">
+            <label for="ecole">
+                <select name="ecole" id="ecole" onchange="{{path_for('selectClasse.post') }}">
                     <option value="0">Sélectionner Ecole</option>
                     {% for ecole in listeEcole %}
                         <option value={{ ecole['nom_ecole'] }}>{{ ecole['nom_ecole'] }}</option>
                     {% endfor %}
                 </select>
             </label>
-            <label for="Classe">
-                <select name="Classe" id="Classe" onchange="{{ path_for('exportData.post') }}">
+            <label for="classe">
+                <select name="classe" id="classe" onchange="{{ path_for('exportData.post') }}">
                     <option value="0">Sélectionner Classe</option>
                     {% for classe in listeClasse %}
                         <option value={{ classe.nom_classe }}>{{ classe.nom_classe }}</option>
                     {% endfor %}
                 </select>
             </label>
+            <input type="date" name="Date" title="Date">
             <input type="submit" value="Télécharger">
         </form>
 
