renomage calendrier+license
renommage du calendrier zabuto->jis
+license haut fichier calendrier

--- a/site/templates/pages/calendrier.twig
+++ b/site/templates/pages/calendrier.twig
@@ -3,12 +3,12 @@
 
 {% block css %}
     {{ parent() }}
-    {{ m.css('zabuto_calendar.css') }}
+    {{ m.css('jis_calendar.css') }}
 {% endblock %}
 
 {% block script_footer %}
     {{ parent() }}
-    {{ m.js('zabuto_calendar.js') }}
+    {{ m.js('jis_calendar.js') }}
 {% endblock %}
 
 {% block body %}
