--- a/site/templates/pages/index-admin.twig
+++ b/site/templates/pages/index-admin.twig
@@ -39,7 +39,7 @@
                             <input class="form-control" placeholder="Code Postal" name="email" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-lg btn-success btn-block" type="submit">Envoyez</button>
+                            <button class="btn btn-lg btn-success btn-block" type="submit">Envoyer</button>
                         </div>
 
                     </fieldset>
