Essaye script ajax

--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -15,7 +15,7 @@
     <div class="firstContainer">
         <form enctype="multipart/form-data" class="firstContainer" method="post">
             <label for="ecole">
-                <select name="ecole" id="ecole" onchange="{{path_for('exportData.post') }}">
+                <select name="ecole" id="ecole" onchange="ajaxExportData()">
                     <option value="0">Sélectionner Ecole</option>
                     {% for ecole in listeEcole %}
                         <option value={{ ecole['nom_ecole'] }}>{{ ecole['nom_ecole'] }}</option>
@@ -23,16 +23,19 @@
                 </select>
             </label>
             <label for="classe">
-                <select name="classe" id="classe" onchange="{{ path_for('exportData.post') }}">
+                <select name="classe" id="classe" onchange="ajaxExportData()">
                     <option value="0">Sélectionner Classe</option>
                     {% for classe in listeClasse %}
-                        <option value={{ classe.nom_classe }}>{{ classe.nom_classe }}</option>
+                        <option value={{ classe['nom_classe']}}>{{ classe['nom_classe'] }}</option>
                     {% endfor %}
                 </select>
             </label>
-            <input type="date" name="date_journee" title="date_journee">
-            <input type="submit" value="Télécharger">
+            <input type="date" name="date_journee" title="date_journee" onchange="ajaxExportData()">
+            <input type="button" value="Télécharger" name="Télécharger" id="Télécharger" onclick="ajaxExportData()">
         </form>
+        <div id="resultat">
+
+        </div>
 
     </div>
 {% endblock %}
