Ajout NavBar Admin
Ne prends en compte que les pages Administrateurs existantes pour le moment

--- a/site/templates/pages/importData.twig
+++ b/site/templates/pages/importData.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ include('navbar-admin.twig') }}
     <form  class="firstContainer" enctype="multipart/form-data" action="{{ path_for('importData.post') }}" method="post">
             Sélectionnez le fichier à importer<br>
             <input type="file" name="data">
