--- a/site/templates/pages/index-admin.twig
+++ b/site/templates/pages/index-admin.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ include('navbar-admin.twig') }}
     <div class="container-fluid text-center firstContainer" xmlns="http://www.w3.org/1999/html">
         <div class="row content">
             <div class="col-md-2 sidenav">
