--- a/site/templates/pages/index-admin.twig
+++ b/site/templates/pages/index-admin.twig
@@ -31,11 +31,11 @@
                         <fieldset>
                             <div class="form-group">
                                 <span class="label label-primary col-md-12 center-block info">Ajout Utilisateur</span>
-                                <input class="form-control" placeholder="Nom" name="nom_rl" style="text-align:center; margin: 5px;" type="text" value="" required autofocus>
-                                <input class="form-control" placeholder="Prenom" name="prenom_rl" type="text"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                                <input class="form-control" placeholder="E-mail" name="adresse_mail_rl" type="email"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                                <input class="form-control" placeholder="Ville" name="ville" type="text"  style="text-align:center; margin: 5px;" value="" required autofocus>
-                                <input class="form-control" placeholder="Code Postal" name="code_postal" type="number"  style="text-align:center; margin: 5px;" value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="Nom" name="nom_rl" type="text" value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="Prenom" name="prenom_rl" type="text"  value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="E-mail" name="adresse_mail_rl" type="email" value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="Ville" name="ville" type="text" value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="Code Postal" name="code_postal" type="number" value="" required autofocus>
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-lg btn-success btn-block" type="submit">Envoyer</button>
