Fix NavBar Admin
Fix deconnexion 2. Retrait de navBar Admin sur login-admin

--- a/site/templates/pages/login-admin.twig
+++ b/site/templates/pages/login-admin.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar-admin.twig') }}
+    {{ include('navbar.twig') }}
 
     <div class="container firstContainer">
 
