Creation page GET modifier RL

--- a/site/templates/pages/admin/adminRegeneration.twig
+++ b/site/templates/pages/admin/adminRegeneration.twig
@@ -37,5 +37,5 @@
 {% endblock %}
 {% block script_footer %}
     {{ parent() }}
-    {{ m.js('adminRegeneration.js') }}
+    {{ m.js('adminRegenerationRecherche.js') }}
 {% endblock %}
