--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -34,8 +34,7 @@
                     </div>
 
                     <div class="panel-body" style="word-wrap:break-word;">
-                        {{ infoUtilisateur.nom_rl |capitalize }}
-                        {{ infoUtilisateur.prenom_rl |capitalize}}
+                        {{ infoUtilisateur.prenom_rl |capitalize}} {{ infoUtilisateur.nom_rl |capitalize }}
                         <div class="row"></div>
                         {{ infoUtilisateur.adresse_mail_rl }}
                         <div class="row"></div>
