--- a/site/templates/pages/index-admin.twig
+++ b/site/templates/pages/index-admin.twig
@@ -32,10 +32,10 @@
                             <div class="form-group">
                                 <span class="label label-primary col-md-12 center-block info">Ajout Utilisateur</span>
                                 <input class="form-control formWeb" placeholder="Nom" name="nom_rl" type="text" value="" required autofocus>
-                                <input class="form-control formWeb" placeholder="Prenom" name="prenom_rl" type="text"  value="" required autofocus>
-                                <input class="form-control formWeb" placeholder="E-mail" name="adresse_mail_rl" type="email" value="" required autofocus>
-                                <input class="form-control formWeb" placeholder="Ville" name="ville" type="text" value="" required autofocus>
-                                <input class="form-control formWeb" placeholder="Code Postal" name="code_postal" type="number" value="" required autofocus>
+                                <input class="form-control formWeb" placeholder="Prenom" name="prenom_rl" type="text"  value="">
+                                <input class="form-control formWeb" placeholder="E-mail" name="adresse_mail_rl" type="email" value="">
+                                <input class="form-control formWeb" placeholder="Ville" name="ville" type="text" value="">
+                                <input class="form-control formWeb" placeholder="Code Postal" name="code_postal" type="number" value="">
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-lg btn-success btn-block" type="submit">Envoyer</button>
