--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -16,6 +16,7 @@
 
 /* Set black background color, white text and some padding */
 footer {
+    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: #555;
