--- a/site/templates/navbar-admin.twig
+++ b/site/templates/navbar-admin.twig
@@ -10,7 +10,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="{{ path_for('index-admin') }}">Administrateur</a></li>
+                <li><a href="{{ path_for('index-admin') }}">Ajout Utilisateur</a></li>
                 <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
             </ul>
 
