--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -24,7 +24,7 @@
             </label>
             <label for="classe">
                 <select name="classe" id="classe" >
-                    <option value="0">Sélectionner Classe</option>
+                    <option value="0" disabled>Sélectionner Classe</option>
                 </select>
             </label>
             <input type="button" value="Télécharger" name="Télécharger" id="Télécharger" onclick="ajaxExportData()">
