--- a/site/templates/pages/admin/modifierRL.twig
+++ b/site/templates/pages/admin/modifierRL.twig
@@ -21,19 +21,34 @@
                             <fieldset>
                                 <h3>Informations de {{ infos.nom_rl }} {{ infos.prenom_rl }} : </h3>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Nom" name="nom_rl" style="text-align:center; margin: 5px;" type="text" value="{{ infos.nom_rl }}" required autofocus>
-                                    <input class="form-control" placeholder="Prenom" name="prenom_rl" type="text"  style="text-align:center; margin: 5px;" value="{{ infos.prenom_rl }}" required>
-                                    <input class="form-control" placeholder="E-mail" name="adresse_mail_rl" type="email"  style="text-align:center; margin: 5px;" value="{{ infos.adresse_mail_rl }}" required>
-                                    <input class="form-control" placeholder="Complément d'adresse" name="complement_d_adresse" type="text"  style="text-align:center; margin: 5px;" value="{{ infos.complement_d_adresse }}" required>
-                                    <input class="form-control" placeholder="Ville" name="ville" type="text"  style="text-align:center; margin: 5px;" value="{{ infos.ville }}" required>
-                                    <input class="form-control" placeholder="Code Postal" name="code_postal" type="number"  style="text-align:center; margin: 5px;" value="{{ infos.code_postal }}" required>
+                                    <input class="form-control" placeholder="Nom" name="nom_rl"
+                                           style="text-align:center; margin: 5px;" type="text"
+                                           value="{{ infos.nom_rl }}" required autofocus>
+                                    <input class="form-control" placeholder="Prenom" name="prenom_rl" type="text"
+                                           style="text-align:center; margin: 5px;" value="{{ infos.prenom_rl }}"
+                                           required>
+                                    <input class="form-control" placeholder="E-mail" name="adresse_mail_rl" type="email"
+                                           style="text-align:center; margin: 5px;" value="{{ infos.adresse_mail_rl }}"
+                                           required>
+                                    <input class="form-control" placeholder="Complément d'adresse"
+                                           name="complement_d_adresse" type="text"
+                                           style="text-align:center; margin: 5px;"
+                                           value="{{ infos.complement_d_adresse }}" required>
+                                    <input class="form-control" placeholder="Ville" name="ville" type="text"
+                                           style="text-align:center; margin: 5px;" value="{{ infos.ville }}" required>
+                                    <input class="form-control" placeholder="Code Postal" name="code_postal"
+                                           type="number" style="text-align:center; margin: 5px;"
+                                           value="{{ infos.code_postal }}" required>
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-lg btn-warning btn-block" type="submit">Modifier</button>
-                                    <button id="regenMDP" class="btn btn-lg btn-primary btn-block" type="button">Générer un nouveau mot de passe</button>
+                                    <button id="regenMDP" class="btn btn-lg btn-primary btn-block" type="button">Générer
+                                        un nouveau mot de passe
+                                    </button>
                                 </div>
                             </fieldset>
                         </form>
+                        <div id="lien"></div>
                     {% endif %}
                 </div>
             </div>
@@ -60,9 +75,10 @@
                 url: '/admin/imprimerPassword',
                 data: data,
                 dataType: 'json'
-            }).done(function (response) {
-                $.each(response, function (k, v) {
-                });
+            }).done(function (data) {
+                console.log(data);
+                $("#lien").empty();
+                $("#lien").append("<a href=\"../../"+data+"\" target='_blank'>lien de telechargement</a>");
             });
         }
     </script>
