AJout de Classe Fonctionnel
Fonctionnel, todo: design

--- a/site/templates/pages/classe-admin.twig
+++ b/site/templates/pages/classe-admin.twig
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                     {% endif %}
-                    <form role="form" action="{{ path_for('classe-admin.post') }}" method="post">
+                    <form role="form" action="" method="post">
                         <fieldset>
                             <div class="form-group">
                                 <span class="label label-primary col-md-12 center-block info">Ajout Classe</span>
