--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -27,7 +27,7 @@
                     <option value="0" disabled>Sélectionner Classe</option>
                 </select>
             </label>
-            <input type="button" value="Télécharger" name="Télécharger" id="Télécharger" onclick="ajaxExportData()">
+            <input type="button" value="Télécharger" name="Télécharger" id="Télécharger" onclick="ajaxExportDataGetPlanning()">
         </form>
         <div id="resultat">
         </div>
