--- a/site/templates/navbar-admin.twig
+++ b/site/templates/navbar-admin.twig
@@ -12,6 +12,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ path_for('index-admin') }}">Administrateur</a></li>
                 <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
+                <li><a href="{{ path_for('utilisateur-enfant') }}">Associer</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if infoUtilisateur.id_admin %}
